// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`App Page with route "/" matches snapshot, route "/" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <span
                class="material-symbols-outlined"
              >
                 menu 
              </span>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div
            class="flex flex-col items-center gap-6 sm:flex-row"
          >
            <img
              alt=""
              class="h-32 w-32 min-w-32 rounded-full border-2 border-[var(--primary-color)] bg-cover bg-center shadow-[0_0_15px_rgba(5,199,5,0.5)]"
              src="FileMock"
            />
            <div
              class="text-center sm:text-left"
            >
              <h2
                class="text-3xl font-bold text-white"
              >
                Alexander Evstafiadi
              </h2>
              <p
                class="text-[var(--primary-color)]"
              >
                &gt;Senior Software Engineer
              </p>
              <div
                class="mt-2 flex flex-wrap justify-center gap-x-4 gap-y-1 text-sm text-neutral-400 sm:justify-start"
              >
                <span>
                  <span
                    class="text-green-500/70"
                  >
                    //
                  </span>
                   STATUS: Not looking for a job
                </span>
                <span>
                  <span
                    class="text-green-500/70"
                  >
                    //
                  </span>
                   LOCATION: Voronezh, Russia
                </span>
              </div>
            </div>
          </div>
          <div
            class="mt-8 grid grid-cols-1 gap-8 md:grid-cols-2"
          >
            <div>
              <h3
                class="glitch mb-4 text-lg font-bold uppercase tracking-widest text-[var(--primary-color)]"
              >
                Personal_Info
              </h3>
              <div
                class="space-y-3 border-l-2 border-[var(--primary-color)]/30 pl-4 text-sm"
              >
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Age
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : 29
                  </span>
                </p>
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Date_of_birthday
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : February 22, 1996
                  </span>
                </p>
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Relocation
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : Open to offers
                  </span>
                </p>
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Business_trips
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : Willing to travel
                  </span>
                </p>
              </div>
            </div>
            <div>
              <h3
                class="glitch mb-4 text-lg font-bold uppercase tracking-widest text-[var(--primary-color)]"
              >
                Education
              </h3>
              <div
                class="space-y-3 border-l-2 border-[var(--primary-color)]/30 pl-4 text-sm"
              >
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    University
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : Voronezh State University
                  </span>
                </p>
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Degree
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : Master's degree
                  </span>
                </p>
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Field_of_study
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : Radio Physical Sciences
                  </span>
                </p>
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Website
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : https://vsu.ru
                  </span>
                </p>
              </div>
            </div>
            <div>
              <h3
                class="glitch mb-4 text-lg font-bold uppercase tracking-widest text-[var(--primary-color)]"
              >
                Contact_Details
              </h3>
              <div
                class="space-y-3 border-l-2 border-[var(--primary-color)]/30 pl-4 text-sm"
              >
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Phone
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : +7 (960)-125-41-38
                  </span>
                </p>
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Email
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : aleksandrevstafiadi@gmail.com
                  </span>
                </p>
                <p>
                  <span
                    class="w-32 inline-block text-neutral-400 uppercase"
                  >
                    Linkedin
                  </span>
                   
                  <span
                    class="text-white"
                  >
                    : https://www.linkedin.com/in/alexander-evstafiadi
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            class="mt-8 text-right text-xs text-neutral-500"
          >
            <p>
              LAST UPDATE: 
              <span
                class="text-[var(--primary-color)]/80"
              >
                July 26, 2024
              </span>
            </p>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App Page with route "/contacts" matches snapshot, route "/contacts" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <span
                class="material-symbols-outlined"
              >
                 menu 
              </span>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div
            class="ContactsPage"
          >
            <svg
              class="Icon Icon_appFontSize"
              color="currentColor"
              fill="currentColor"
            >
              <use
                xlink:href="FileMock#email"
              />
            </svg>
            <h2
              class="ContactsPage__Title glitch"
            >
              Contacts
            </h2>
            <div
              class="ContactsPage__Items"
            >
              <a
                class="ContactLink"
                href="https://github.com/a1exevs"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    GitHub
                  </title>
                  <use
                    xlink:href="FileMock#github"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  GitHub
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://voronezh.hh.ru/resume/10aa6646ff077b3cb70039ed1f47394e4f476f"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Head Hunter
                  </title>
                  <use
                    xlink:href="FileMock#head-hunter"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  hh.ru
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://www.linkedin.com/in/alexander-evstafiadi/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    LinkedIn
                  </title>
                  <use
                    xlink:href="FileMock#linkedin"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  LinkedIn
                </span>
              </a>
              <a
                class="ContactLink"
                href="mailto:aleksandrevstafiadi@gmail.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Google email
                  </title>
                  <use
                    xlink:href="FileMock#email"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  Google Email
                </span>
              </a>
              <a
                class="ContactLink"
                href="mailto:evstafiadi.shura@yandex.ru"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Yandex email
                  </title>
                  <use
                    xlink:href="FileMock#email"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  Yandex Email
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://www.youtube.com/channel/UCVrwEd4-3guB5NFQ_oidREg"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    YouTube
                  </title>
                  <use
                    xlink:href="FileMock#youtube"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  YouTube
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://leetcode.com/u/a1exevs/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    LeetCode
                  </title>
                  <use
                    xlink:href="FileMock#leetcode"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  LeetCode
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://www.instagram.com/alexevs_gb"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Instagram
                  </title>
                  <use
                    xlink:href="FileMock#instagram"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  Instagram
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://api.whatsapp.com/send?phone=79601254138"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    WhatsApp
                  </title>
                  <use
                    xlink:href="FileMock#instagram"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  WhatsApp
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://t.me/AlexanderEvstafiadi"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Telegram
                  </title>
                  <use
                    xlink:href="FileMock#instagram"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  Telegram
                </span>
              </a>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App Page with route "/experience" matches snapshot, route "/experience" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <span
                class="material-symbols-outlined"
              >
                 menu 
              </span>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div
            class="ExperiencePage"
          >
            <h2
              class="glitch mb-8 text-center text-3xl font-bold uppercase tracking-widest text-[var(--primary-color)]"
            >
              Work_Experience
            </h2>
            <div
              class="ExperiencePage__Content"
            >
              <div
                class="Stepper"
              >
                <div
                  class="Step"
                >
                  <div
                    class="Step__LeftBlock"
                  >
                    <div
                      class="Step__Indicator Step__Indicator_current"
                    >
                      2
                    </div>
                    <div
                      class="Step__Arrow Step__Arrow_current"
                    />
                  </div>
                  <div
                    class="Step__Content"
                  >
                    <div
                      class="ExperiencePage__HistoryItem"
                    >
                      <div
                        class="Block"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Company:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="DSR Corporation"
                          >
                            DSR Corporation
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Website:
                          </label>
                          <a
                            class="Field__Value Link"
                            href="https://en.dsr-corporation.com"
                            title="https://en.dsr-corporation.com"
                          >
                            https://en.dsr-corporation.com
                          </a>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Mar 2022 – Present"
                          >
                            Mar 2022 – Present
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Career:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Software Engineer"
                          >
                            Software Engineer
                          </span>
                        </div>
                      </div>
                      <label
                        class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                      >
                        Project list
                      </label>
                      <label
                        class="Label Label_tiny Label_alignment-center"
                      >
                        (the most recent projects at the top)
                      </label>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="eLIMS - a system for tracking, monitoring, and processing chemical sample data in laboratories."
                          >
                            eLIMS - a system for tracking, monitoring, and processing chemical sample data in laboratories.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Jun 2022 – Present"
                          >
                            Jun 2022 – Present
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Angular 2+ / AngularJS, React, RxJS, TypeScript, LESS, Azure, Webpack, Jasmine, Karma, Playwright"
                          >
                            Angular 2+ / AngularJS, React, RxJS, TypeScript, LESS, Azure, Webpack, Jasmine, Karma, Playwright
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="front-end development, feature implementation, debugging, testing, code review, design, dev validation"
                          >
                            front-end development, feature implementation, debugging, testing, code review, design, dev validation
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  As part of a feature team, developed the Layout Builder module — a visual content layout configuration tool for dialog windows;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Built an Excel-like table within a dedicated module with complex business logic support;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Maintained the Alias mechanism for dynamic renaming of business entities throughout the system;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Implemented license-based feature control, adjusting functionality availability based on active licenses;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Contributed to the statistics module: implemented and optimized chart rendering logic and patched the D3 library to meet project-specific requirements.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Add-In Plugin - a Microsoft Excel add-in designed for working with chemical lab analysis data."
                          >
                            Add-In Plugin - a Microsoft Excel add-in designed for working with chemical lab analysis data.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Jan 2024 – Mar 2024"
                          >
                            Jan 2024 – Mar 2024
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Angular 2+, RxJS, TypeScript, Jasmine, Karma, Azure, MS Excel"
                          >
                            Angular 2+, RxJS, TypeScript, Jasmine, Karma, Azure, MS Excel
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="front-end development, feature implementation, debugging, testing, code review, design, dev validation"
                          >
                            front-end development, feature implementation, debugging, testing, code review, design, dev validation
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Optimized the plugin’s performance in the web version of Excel, significantly speeding up several resource-intensive operations;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Took part in designing and implementing the application versioning mechanism.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="eLIMS Web Client - a client-facing web system for registering chemical sample analyses in laboratories."
                          >
                            eLIMS Web Client - a client-facing web system for registering chemical sample analyses in laboratories.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Sep 2023 – Jan 2024"
                          >
                            Sep 2023 – Jan 2024
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Angular 2+, NgXs, RxJS, TypeScript, Jasmine, Cypress, Azure"
                          >
                            Angular 2+, NgXs, RxJS, TypeScript, Jasmine, Cypress, Azure
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="front-end development, feature implementation, debugging, testing, code review, design, dev validation"
                          >
                            front-end development, feature implementation, debugging, testing, code review, design, dev validation
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Implemented a specific column resizing, ordering, and selection mechanism for new pages (distinct in behavior from existing ones) based on customer requirements, applying the Strategy design pattern;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Optimized user access control logic across pages and UI elements based on permissions.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Ad Builder - a micro-frontend app for creating rental property listings and publishing them across various social media platforms."
                          >
                            Ad Builder - a micro-frontend app for creating rental property listings and publishing them across various social media platforms.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Mar 2022 – Jun 2022"
                          >
                            Mar 2022 – Jun 2022
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="React, Redux, NestJS, MikroORM, MariaDB, GitLab"
                          >
                            React, Redux, NestJS, MikroORM, MariaDB, GitLab
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="full-stack development, feature implementation, debugging, testing"
                          >
                            full-stack development, feature implementation, debugging, testing
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Joined the project from day one and helped define its architecture;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Integrated third-party services such as Facebook and Instagram;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Significantly improved the deployment pipeline using containerization (Docker), speeding up delivery and app maintenance.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Step"
                >
                  <div
                    class="Step__LeftBlock Step__LeftBlock_withBottomBorder"
                  >
                    <div
                      class="Step__Indicator"
                    >
                      1
                    </div>
                    <div
                      class="Step__Arrow"
                    />
                  </div>
                  <div
                    class="Step__Content"
                  >
                    <div
                      class="ExperiencePage__HistoryItem"
                    >
                      <div
                        class="Block"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Company:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Technomarket"
                          >
                            Technomarket
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Website:
                          </label>
                          <a
                            class="Field__Value Link"
                            href="https://tm-v.ru"
                            title="https://tm-v.ru"
                          >
                            https://tm-v.ru
                          </a>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Nov 2019 – Mar 2022"
                          >
                            Nov 2019 – Mar 2022
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Career:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Software Engineer"
                          >
                            Software Engineer
                          </span>
                        </div>
                      </div>
                      <label
                        class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                      >
                        Project list
                      </label>
                      <label
                        class="Label Label_tiny Label_alignment-center"
                      >
                        (the most recent projects at the top)
                      </label>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="SMART-RIS is a medical software solution that streamlines workflows for radiologists, functional diagnostics specialists, and clinicians across various fields."
                          >
                            SMART-RIS is a medical software solution that streamlines workflows for radiologists, functional diagnostics specialists, and clinicians across various fields.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Nov 2019 – Mar 2022"
                          >
                            Nov 2019 – Mar 2022
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="React, Redux, NestJS, MySql, Sequilize, Jest, TypeScript, Git, Linux"
                          >
                            React, Redux, NestJS, MySql, Sequilize, Jest, TypeScript, Git, Linux
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="full-stack development, tech leadership, features implementation, debugging, refactoring, testing, code review"
                          >
                            full-stack development, tech leadership, features implementation, debugging, refactoring, testing, code review
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Took part in end-to-end development of all major components — web client, web server, and desktop app — from MVP to a full-scale system now used across multiple healthcare facilities in the Voronezh and Lipetsk regions;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Led development of the “Report Builder” module, enabling dynamic form generation and PDF templates based on flexible XML schemas;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Helped integrate the system with other medical platforms like VOKKDC and MedSoft;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Contributed to the architecture of the “Configurator” — a core module for setting up organizations, workstations, and their relationships;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Migrated key functionality from the legacy desktop app to a modern web-based solution.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App Page with route "/projects" matches snapshot, route "/projects" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <span
                class="material-symbols-outlined"
              >
                 menu 
              </span>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div>
            <h2
              class="glitch mb-8 text-center text-3xl font-bold uppercase tracking-widest text-[var(--primary-color)]"
            >
              Projects
            </h2>
            <div
              class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3"
            >
              <div
                class="project-card group cursor-pointer border border-[#273a27] bg-black/30 p-4 transition-all duration-300 hover:border-[var(--primary-color)] hover:shadow-[0_0_20px_rgba(5,199,5,0.5)]"
              >
                <div
                  class="relative overflow-hidden"
                >
                  <img
                    alt="Project 1"
                    class="project-image w-full h-48 object-cover transition-all duration-300 filter grayscale brightness-75"
                    src="FileMock"
                  />
                  <div
                    class="absolute inset-0 bg-black/50 transition-opacity duration-300 group-hover:opacity-0"
                  />
                </div>
                <div
                  class="mt-4"
                >
                  <h3
                    class="project-title text-xl font-bold text-white transition-colors duration-300"
                  >
                    HandySurf
                  </h3>
                  <p
                    class="mt-2 text-sm text-neutral-400"
                  >
                    Chrome extension. Your ultimate hands-free browser control with advanced gesture recognition and AI-powered navigation.
                  </p>
                  <div
                    class="mt-4"
                  >
                    <h4
                      class="text-sm font-semibold uppercase text-[var(--primary-color)]/80"
                    >
                      STACK:
                    </h4>
                    <div
                      class="mt-2 flex flex-wrap gap-2"
                    >
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        React
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        RxJS
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Zustand
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        MUI
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        MediaPipe
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Webpack
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Typescript
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Python
                      </span>
                    </div>
                  </div>
                  <div
                    class="mt-4 flex items-center justify-between"
                  >
                    <a
                      class="flex items-center gap-1 text-sm text-green-400 transition-colors hover:text-white"
                      href="https://chromewebstore.google.com/detail/handysurf/bbpfkcnjhagmkpcglcmpgnnlkimpdeoo"
                      target="_blank"
                    >
                      <span
                        class="material-symbols-outlined text-base"
                      >
                         link 
                      </span>
                      Live Demo
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="project-card group cursor-pointer border border-[#273a27] bg-black/30 p-4 transition-all duration-300 hover:border-[var(--primary-color)] hover:shadow-[0_0_20px_rgba(5,199,5,0.5)]"
              >
                <div
                  class="relative overflow-hidden"
                >
                  <img
                    alt="Project 2"
                    class="project-image w-full h-48 object-cover transition-all duration-300 filter grayscale brightness-75"
                    src="FileMock"
                  />
                  <div
                    class="absolute inset-0 bg-black/50 transition-opacity duration-300 group-hover:opacity-0"
                  />
                </div>
                <div
                  class="mt-4"
                >
                  <h3
                    class="project-title text-xl font-bold text-white transition-colors duration-300"
                  >
                    SIT36 Website
                  </h3>
                  <p
                    class="mt-2 text-sm text-neutral-400"
                  >
                    A website for a company "StroyInTekh" specializing in the manufacturing of storage and purification equipment.
                  </p>
                  <div
                    class="mt-4"
                  >
                    <h4
                      class="text-sm font-semibold uppercase text-[var(--primary-color)]/80"
                    >
                      STACK:
                    </h4>
                    <div
                      class="mt-2 flex flex-wrap gap-2"
                    >
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Next.js
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        SCSS
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Jest
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Playwright
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        StoryBook
                      </span>
                    </div>
                  </div>
                  <div
                    class="mt-4 flex items-center justify-between"
                  >
                    <a
                      class="flex items-center gap-1 text-sm text-green-400 transition-colors hover:text-white"
                      href="https://sit36.ru"
                      target="_blank"
                    >
                      <span
                        class="material-symbols-outlined text-base"
                      >
                         link 
                      </span>
                      Live Demo
                    </a>
                    <a
                      class="flex items-center gap-1 text-sm text-green-400 transition-colors hover:text-white"
                      href="https://github.com/a1exevs/stroy-in-tekh"
                      target="_blank"
                    >
                      <span
                        class="material-symbols-outlined text-base"
                      >
                         code 
                      </span>
                      Repository
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="project-card group cursor-pointer border border-[#273a27] bg-black/30 p-4 transition-all duration-300 hover:border-[var(--primary-color)] hover:shadow-[0_0_20px_rgba(5,199,5,0.5)]"
              >
                <div
                  class="relative overflow-hidden"
                >
                  <img
                    alt="Project 3"
                    class="project-image w-full h-48 object-cover transition-all duration-300 filter grayscale brightness-75"
                    src="FileMock"
                  />
                  <div
                    class="absolute inset-0 bg-black/50 transition-opacity duration-300 group-hover:opacity-0"
                  />
                </div>
                <div
                  class="mt-4"
                >
                  <h3
                    class="project-title text-xl font-bold text-white transition-colors duration-300"
                  >
                    Lipsync Timing Checker
                  </h3>
                  <p
                    class="mt-2 text-sm text-neutral-400"
                  >
                    Application for calibrating viseme according to Audio track.
                  </p>
                  <div
                    class="mt-4"
                  >
                    <h4
                      class="text-sm font-semibold uppercase text-[var(--primary-color)]/80"
                    >
                      STACK:
                    </h4>
                    <div
                      class="mt-2 flex flex-wrap gap-2"
                    >
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        React
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Tailwind
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Wavesurfer
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Jest
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Playwright
                      </span>
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        StoryBook
                      </span>
                    </div>
                  </div>
                  <div
                    class="mt-4 flex items-center justify-between"
                  >
                    <a
                      class="flex items-center gap-1 text-sm text-green-400 transition-colors hover:text-white"
                      href="https://a1exevs.github.io/lipsync-timing-checker"
                      target="_blank"
                    >
                      <span
                        class="material-symbols-outlined text-base"
                      >
                         link 
                      </span>
                      Live Demo
                    </a>
                    <a
                      class="flex items-center gap-1 text-sm text-green-400 transition-colors hover:text-white"
                      href="https://github.com/a1exevs/lipsync-timing-checker"
                      target="_blank"
                    >
                      <span
                        class="material-symbols-outlined text-base"
                      >
                         code 
                      </span>
                      Repository
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="project-card group cursor-pointer border border-[#273a27] bg-black/30 p-4 transition-all duration-300 hover:border-[var(--primary-color)] hover:shadow-[0_0_20px_rgba(5,199,5,0.5)]"
              >
                <div
                  class="relative overflow-hidden"
                >
                  <img
                    alt="Project 4"
                    class="project-image w-full h-48 object-cover transition-all duration-300 filter grayscale brightness-75"
                    src="FileMock"
                  />
                  <div
                    class="absolute inset-0 bg-black/50 transition-opacity duration-300 group-hover:opacity-0"
                  />
                </div>
                <div
                  class="mt-4"
                >
                  <h3
                    class="project-title text-xl font-bold text-white transition-colors duration-300"
                  >
                    TS-guards
                  </h3>
                  <p
                    class="mt-2 text-sm text-neutral-400"
                  >
                    Typescript guards library. This library provides a robust set of utility functions to simplify and streamline type-checking and guard validation in your code.
                  </p>
                  <div
                    class="mt-4"
                  >
                    <h4
                      class="text-sm font-semibold uppercase text-[var(--primary-color)]/80"
                    >
                      STACK:
                    </h4>
                    <div
                      class="mt-2 flex flex-wrap gap-2"
                    >
                      <span
                        class="rounded-sm bg-[#1a431a] px-2 py-1 text-xs text-green-300"
                      >
                        Typescript
                      </span>
                    </div>
                  </div>
                  <div
                    class="mt-4 flex items-center justify-between"
                  >
                    <a
                      class="flex items-center gap-1 text-sm text-green-400 transition-colors hover:text-white"
                      href="https://www.npmjs.com/package/@alexevs/ts-guards?activeTab=readme"
                      target="_blank"
                    >
                      <span
                        class="material-symbols-outlined text-base"
                      >
                         link 
                      </span>
                      Live Demo
                    </a>
                    <a
                      class="flex items-center gap-1 text-sm text-green-400 transition-colors hover:text-white"
                      href="https://github.com/a1exevs/ts-guards"
                      target="_blank"
                    >
                      <span
                        class="material-symbols-outlined text-base"
                      >
                         code 
                      </span>
                      Repository
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App Page with route "/skills" matches snapshot, route "/skills" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <span
                class="material-symbols-outlined"
              >
                 menu 
              </span>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div>
            <h2
              class="glitch mb-8 text-center text-3xl font-bold uppercase tracking-widest text-[var(--primary-color)]"
            >
              Skills_Matrix
            </h2>
            <div
              class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3"
            >
              <div
                class="border border-[var(--primary-color)]/30 p-4"
              >
                <h3
                  class="mb-4 text-lg font-bold text-white"
                >
                  <span
                    class="text-[var(--primary-color)]"
                  >
                    &gt;
                  </span>
                   Programming_Languages
                </h3>
                <ul
                  class="space-y-2 text-sm text-neutral-300"
                >
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     JavaScript
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     TypeScript
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     HTML
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     CSS/LESS/SCSS
                  </li>
                </ul>
              </div>
              <div
                class="border border-[var(--primary-color)]/30 p-4"
              >
                <h3
                  class="mb-4 text-lg font-bold text-white"
                >
                  <span
                    class="text-[var(--primary-color)]"
                  >
                    &gt;
                  </span>
                   Frameworks_&_Libraries
                </h3>
                <ul
                  class="space-y-2 text-sm text-neutral-300"
                >
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Angular
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     React
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Next.js
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     NestJS
                  </li>
                </ul>
              </div>
              <div
                class="border border-[var(--primary-color)]/30 p-4"
              >
                <h3
                  class="mb-4 text-lg font-bold text-white"
                >
                  <span
                    class="text-[var(--primary-color)]"
                  >
                    &gt;
                  </span>
                   Databases
                </h3>
                <ul
                  class="space-y-2 text-sm text-neutral-300"
                >
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     PostgreSQL
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     MySQL
                  </li>
                </ul>
              </div>
              <div
                class="border border-[var(--primary-color)]/30 p-4"
              >
                <h3
                  class="mb-4 text-lg font-bold text-white"
                >
                  <span
                    class="text-[var(--primary-color)]"
                  >
                    &gt;
                  </span>
                   Tools_&_Platforms
                </h3>
                <ul
                  class="space-y-2 text-sm text-neutral-300"
                >
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Git & GitHub & GitLub
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Docker
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Webpack
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Jira & Confluence
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Azure
                  </li>
                </ul>
              </div>
              <div
                class="border border-[var(--primary-color)]/30 p-4"
              >
                <h3
                  class="mb-4 text-lg font-bold text-white"
                >
                  <span
                    class="text-[var(--primary-color)]"
                  >
                    &gt;
                  </span>
                   Soft_Skills
                </h3>
                <ul
                  class="space-y-2 text-sm text-neutral-300"
                >
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Mentoring
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Problem Solving
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Team Collaboration
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Agile Methodologies
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Communication
                  </li>
                  <li
                    class="flex items-center gap-2"
                  >
                    <span
                      class="text-[var(--primary-color)]"
                    >
                      //
                    </span>
                     Adaptability
                  </li>
                </ul>
              </div>
              <div
                class="border border-[var(--primary-color)]/30 p-4 flex flex-col justify-center items-center text-center"
              >
                <span
                  class="material-symbols-outlined text-4xl text-[var(--primary-color)]"
                >
                  psychology
                </span>
                <h3
                  class="mt-2 mb-2 text-lg font-bold text-white"
                >
                  Continuous_Learning
                </h3>
                <p
                  class="text-sm text-neutral-400"
                >
                  Constantly upgrading my skill set to stay ahead in the ever-evolving tech landscape.
                </p>
              </div>
            </div>
            <div
              class="mt-8 text-right text-xs text-neutral-500"
            >
              <p>
                SYSTEM_SCAN_COMPLETE: 
                <span
                  class="text-[var(--primary-color)]/80"
                >
                  All skills up-to-date.
                </span>
              </p>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
